--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Piano Visualizer",
-  "short_name": "PianoVisualizer",
+  "name": "PianoViz",
+  "short_name": "PianoViz",
   "description": "Visualize piano chords and scales on any device.",
   "start_url": "./index.html",
   "display": "standalone",
@@ -9,12 +9,12 @@
   "orientation": "any",
   "icons": [
     {
-      "src": "icons/icon-192.png",
+      "src": "icons/Pv-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "icons/icon-512.png",
+      "src": "icons/Pv-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
