--- a/manifest.json
+++ b/manifest.json
@@ -6,17 +6,5 @@
   "display": "standalone",
   "background_color": "#f7f9fb",
   "theme_color": "#3b82f6",
-  "orientation": "any",
-  "icons": [
-    {
-      "src": "icons/Pv-192.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "icons/Pv-512.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
-  ]
+  "orientation": "any"
 }
